<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jqmq="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field"
    android:orientation="vertical">

    <!--自定义棋盘View-->
    <com.liujh168.jqmq.GameView
        android:id="@+id/gameview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/brothers"
        jqmq:boardbg="#ff0000"
        jqmq:boarddd="56"
        jqmq:boardline="#0000ee"
        jqmq:isVisible="2"
        jqmq:boardox="53"
        jqmq:boardoy="71"
        jqmq:fen="@string/txt_start_fen" />

    <EditText
        android:id="@+id/edtInfofen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint_fen"
        android:inputType="text"
        android:lines="1" />

    <!--第一排按钮-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnstart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_start" />

        <Button
            android:id="@+id/btncopyfen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_copyfen" />

        <Button
            android:id="@+id/btnshowpiece"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_showboard" />

        <Button
            android:id="@+id/btnundo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_undo" />
    </LinearLayout>

    <!--第二排按钮-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnmenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_menu" />

        <Button
            android:id="@+id/btnpastefen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_pastefen" />

        <Button
            android:id="@+id/btnprompt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_prompt" />

        <Button
            android:id="@+id/btnreturn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_return" />
    </LinearLayout>
</LinearLayout>